blackfriday_sale:v1.1 del first floor

--- a/overseas/blackfriday/sale_ru.html
+++ b/overseas/blackfriday/sale_ru.html
@@ -242,6 +242,9 @@
     .sng-list .sng-vk a{background-position: 0 -315px;background-image: url(http://img12.360buyimg.com/cms/jfs/t2341/226/988817400/7722/baefe349/56552209Nfdc69d2b.png);height:42px;width: 42px;line-height: 999em;overflow: hidden}
     .sng-fb .icon{background-position: -44px -315px;}
     .sng-top .icon{background-position: -88px -315px;}
+    /* del smart */
+    .mod-1{display: none}
+    .mod-2 .floor{padding-bottom: 60px;padding-top: 0;}
 </style>
 
 <div class="bf-wrap">
@@ -251,7 +254,7 @@
     </div>
 
     <div class="bf-main">
-        <div class="mod-1">
+        <!--<div class="mod-1">
             <div class="floor">
                 <a href="" class="href-map" id="floor1"></a>
                 <div class="floor-hd"></div>
@@ -276,7 +279,7 @@
 
                 </div>
                 <div class="floor-2 floor-bd list-4-column">
-                    <!--<ul class="goods-list">
+                    &lt;!&ndash;<ul class="goods-list">
                         <li>
                             <div class="goods-img">
                                 <a href="#" target="_blank"><img src="http://img14.360buyimg.com/cms/jfs/t2032/144/1258634945/104685/bef2630a/5653cb8eN4620af5b.jpg" width="210" height="210"></a>
@@ -367,7 +370,7 @@
                                 </div>
                             </div>
                         </li>
-                    </ul>-->
+                    </ul>&ndash;&gt;
                     <ul class="goods-list" marketStart="6" marketLength="" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556bcc80a68.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
@@ -388,7 +391,7 @@
                 </div>
 
             </div>
-        </div>
+        </div>-->
 
         <div class="mod-2">
             <div class="floor">
@@ -694,7 +697,7 @@
     <div class="float-hd"><h2 class="icon">Black Friday</h2></div>
     <div class="map-list">
         <ul>
-            <li class="float-list-1"><a href="#floor1" class="icon"></a></li>
+            <!--<li class="float-list-1"><a href="#floor1" class="icon"></a></li>-->
             <li class="float-list-2"><a href="#floor2" class="icon"></a></li>
             <li class="float-list-3"><a href="#floor3" class="icon"></a></li>
             <li class="float-list-4"><a href="#floor4" class="icon"></a></li>
