--- a/overseas/blackfriday/sale_en.html
+++ b/overseas/blackfriday/sale_en.html
@@ -248,6 +248,9 @@
     .sng-list .sng-vk a{background-position: 0 -315px;background-image: url(http://img12.360buyimg.com/cms/jfs/t2341/226/988817400/7722/baefe349/56552209Nfdc69d2b.png);height:42px;width: 42px;line-height: 999em;overflow: hidden}
     .sng-fb .icon{background-position: -44px -315px;}
     .sng-top .icon{background-position: -88px -315px;}
+    /* del smart */
+    .mod-2 .floor{padding-bottom: 60px;padding-top: 0;}
+    .float-list-1{display: none;}
 </style>
 
 <div class="bf-wrap">
@@ -257,17 +260,17 @@
     </div>
 
     <div class="bf-main">
-        <div class="mod-1">
+        <!--<div class="mod-1">
             <div class="floor">
                 <a href="" class="href-map" id="floor1"></a>
-                <div class="floor-hd"><!--<img src="http://img10.360buyimg.com/cms/jfs/t2512/293/543520585/6743/3dc56a22/5654502fN3547919c.png" alt="">--></div>
+                <div class="floor-hd">&lt;!&ndash;<img src="http://img10.360buyimg.com/cms/jfs/t2512/293/543520585/6743/3dc56a22/5654502fN3547919c.png" alt="">&ndash;&gt;</div>
 
                 <div class="floor-coupon coupon-1" style="display: none;">
                     <img src="http://img14.360buyimg.com/cms/jfs/t1864/175/1014389136/5826/82ba7ae5/56540beeN91259669.png">
                 </div>
 
                 <div class="floor-1 floor-bd list-3-column">
-                    <!--<ul class="goods-list">
+                    &lt;!&ndash;<ul class="goods-list">
                         <li class="soldout">
                             <div class="goods-img">
                                 <a href="#" target="_blank"><img src="http://img14.360buyimg.com/cms/jfs/t2032/144/1258634945/104685/bef2630a/5653cb8eN4620af5b.jpg" width="295" height="295"></a>
@@ -328,7 +331,7 @@
                                 </div>
                             </div>
                         </li>
-                    </ul>-->
+                    </ul>&ndash;&gt;
                     <ul class="goods-list" marketStart="0" marketLength="6" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c2ad02d5.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
@@ -348,7 +351,7 @@
 
                 </div>
                 <div class="floor-2 floor-bd list-4-column">
-                    <!--<ul class="goods-list">
+                    &lt;!&ndash;<ul class="goods-list">
                         <li>
                             <div class="goods-img">
                                 <a href="#" target="_blank"><img src="http://img14.360buyimg.com/cms/jfs/t2032/144/1258634945/104685/bef2630a/5653cb8eN4620af5b.jpg" width="210" height="210"></a>
@@ -439,7 +442,7 @@
                                 </div>
                             </div>
                         </li>
-                    </ul>-->
+                    </ul>&ndash;&gt;
                     <ul class="goods-list" marketStart="6" marketLength="" marketUrl="http://acen.jd.com/tjw/get/tjw2015/tjw156556c2ad02d5.js"  marketTpl='
                 <li class="{#shopName#}" promoid="{#recommendAd#}" productid="{#recommendReason#}">
                     <div class="goods-img">
@@ -458,7 +461,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div>-->
 
         <div class="mod-2">
             <div class="floor">
@@ -636,7 +639,7 @@
     <div class="float-hd"><h2 class="icon">Black Friday</h2></div>
     <div class="map-list">
         <ul>
-            <li class="float-list-1"><a href="#floor1" class="icon"></a></li>
+            <!--<li class="float-list-1"><a href="#floor1" class="icon"></a></li>-->
             <li class="float-list-2"><a href="#floor2" class="icon"></a></li>
             <li class="float-list-3"><a href="#floor3" class="icon"></a></li>
             <li class="float-list-4"><a href="#floor4" class="icon"></a></li>
